# docs/swagger.json
@@ -21,7 +21,7 @@
             "post": {
                 "responses": {
                     "200": {
-                        "description": "User ID and comma separated roles",
+                        "description": "Объект пользователя",
                         "schema": {
                             "type": "body"
                         }
@@ -41,11 +41,14 @@
                 }
             }
         },
-        "/api/v1/auth/signup": {
+        "/api/v1/auth/logout": {
             "post": {
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Пустой объект",
+                        "schema": {
+                            "type": "body"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -62,29 +65,74 @@
                 }
             }
         },
-        "/api/v1/users/{id}": {
-            "get": {
-                "description": "Create new session or continue old one",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Log user into the system",
-                "operationId": "login",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
+        "/api/v1/auth/signup": {
+            "post": {
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Объект пользователя",
+                        "schema": {
+                            "type": "body"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/verify": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "Пустой объект",
+                        "schema": {
+                            "type": "body"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/api/v1/user/boards": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "Список объектов досок",
+                        "schema": {
+                            "type": "body"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
                     }
                 }
             }
