# internal/app/handlers/board_handler.go
@@ -15,15 +15,18 @@ type BoardHandler struct {
 	bs service.IBoardService
 }
 
-// TODO change the default data
-// @Summary Log user into the system
-// @Description Create new session or continue old one
-// @ID login
-// @Accept  json
-// @Produce  json
-// @Param id path int true "User ID"
-// @Success 200 {object} nil
-// @Router /api/v1/users/{id} [get]
+//	@Summary Получить все доски пользователя
+//	@Description И те, которые он создал и те, у которых он гость
+//
+//	@Accept  json
+//	@Produce  json
+
+//	@Success 200  body object{} true "Список объектов досок"
+//	@Failure 400  {object}  error
+//	@Failure 404  {object}  error
+//	@Failure 500  {object}  error
+//
+// @Router /api/v1/user/boards [get]
 func (bh BoardHandler) GetUserBoards(w http.ResponseWriter, r *http.Request) {
 	rCtx := r.Context()
 	var jsonResponse []byte
